# BavarBled-mlops

./: .env.example  .gitignore  BAVAR_BLED_MODEL_STRATEGY.md  Dockerfile  LICENSE  README.md  docker-compose.yml  parameters.json  pyproject.toml
configs/: trial_30.yaml
scripts/: evaluate.py  train_async.py
src/agent/: replay_buffer.py  td3.py
src/data/: features.py  pipeline.py
src/enviroment/: portfolio_env.py
src/evaluate/: evaluate_model.py
src/models/: bavar.py  bled.py  networks.py
src/register/: register_model.py
src/scoring/: serve.py
src/training/: train.py  train_mlflow.py
tests/: smoke_test.py
