[tool.poetry]
name = "bavar-bled-quant"
version = "1.0.0"
description = "Replication of BAVAR-BLED Framework for Portfolio Optimization"
authors = ["Cong Minh <minhvu@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
numpy = "^1.26.4"
numba = "^0.59.1"
pandas = "^2.2.2"
yfinance = "^0.2.40"
pyyaml = "^6.0.1"
scipy = "^1.13.0"
mlflow-skinny = "^2.10.2"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
pydantic = "^2.7.4"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"